updated styling for calculator table to fix spacing and font styles

--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -78,9 +78,6 @@ input, button {
 	border-radius: 4px;
 	border: 1px solid;
 }
-.error {
-	background: 1px solid red;
-}
 
 .form-warning {
 	color: red;
@@ -199,11 +196,9 @@ input, button {
 	float: right;
 }
 
-/*td {
-	width: 30%;
-	font-size: 14px;
-
-}*/
+td {
+	padding: 1px;
+}
 
 .qty_input {
 	width: 40px;
@@ -225,17 +220,20 @@ input, button {
 
 .emissions {
 	text-align: right;
-	width: 20%;
+	width: 30%;
 	vertical-align: middle;
 	padding-right: 7px;
 }
 
 .qty_ingred_breakdown {
 	vertical-align: middle;
+	font-style: italic;
 }
 
 .emissionButtonContainer {
-	width: 15%;
+	width: 12%;
+	text-align: right;
+	padding-right: 3px;
 }
 
 td > span {
@@ -329,5 +327,8 @@ table {
 
 .table_qty input{
 	width: 90%;
-	padding-left: 3px;
+  padding-left: 3px;
+  color: black;
+  border: 1px solid #bfbfbf;
+  height: 20px;
 }
